--- a/src/main/resources/com/vedruna/proyectoservicios2ev/hello-view.fxml
+++ b/src/main/resources/com/vedruna/proyectoservicios2ev/hello-view.fxml
@@ -1,16 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.vedruna.proyectoservicios2ev.HelloController">
+<VBox alignment="BOTTOM_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="350.0" spacing="20.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vedruna.proyectoservicios2ev.HelloController">
     <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+   <VBox fx:id="innerVBox" alignment="BOTTOM_LEFT" prefHeight="491.0" prefWidth="310.0" />
+   <HBox alignment="CENTER" prefHeight="48.0" prefWidth="326.0">
+      <children>
+         <TextField fx:id="textField" maxWidth="-Infinity" minWidth="250.0">
+            <opaqueInsets>
+               <Insets />
+            </opaqueInsets>
+            <HBox.margin>
+               <Insets right="10.0" />
+            </HBox.margin>
+         </TextField>
+          <Button fx:id="sendButton" onAction="#onSendMessage" textAlignment="CENTER">
+            <font>
+               <Font size="16.0" />
+            </font>
+            <graphic>
+               <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                  <!--<image>
+                     <Image url="@../../../img/botonEnviar.jpg" />
+                  </image>-->
+               </ImageView>
+            </graphic></Button>
+      </children>
+   </HBox>
 </VBox>
