--- a/src/main/resources/com/vedruna/proyectoservicios2ev/login-view.fxml
+++ b/src/main/resources/com/vedruna/proyectoservicios2ev/login-view.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vedruna.proyectoservicios2ev.LoginController">
+<VBox alignment="CENTER" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vedruna.proyectoservicios2ev.client.LoginController">
 
     <Text text="ChatUDP" textAlignment="CENTER">
         <font>
