--- a/src/main/resources/com/vedruna/proyectoServicios2ev/client/login-view.fxml
+++ b/src/main/resources/com/vedruna/proyectoServicios2ev/client/login-view.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vedruna.proyectoservicios2ev.client.LoginController">
+<VBox alignment="CENTER" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vedruna.proyectoServicios2ev.client.LoginController">
 
     <Text text="ChatUDP" textAlignment="CENTER">
         <font>
@@ -17,7 +17,7 @@
     </Text>
    <Label text="IP del servidor" />
 
-    <TextField fx:id="textFieldIp" onAction="#onActionTextFieldIp" maxHeight="50.0" maxWidth="250.0" minHeight="20.0" minWidth="200.0" prefHeight="35.0" prefWidth="200.0" text="127.0.0.1">
+    <TextField fx:id="textFieldIp" maxHeight="50.0" maxWidth="250.0" minHeight="20.0" minWidth="200.0" onAction="#onActionTextFieldIp" prefHeight="35.0" prefWidth="200.0" text="127.0.0.1">
         <VBox.margin>
             <Insets bottom="10.0" />
         </VBox.margin>
@@ -27,7 +27,7 @@
     </TextField>
     <Label text="Puerto local" />
 
-    <TextField fx:id="textFieldLocalPort" onAction="#onActionTextFieldLocalPort" maxHeight="50.0" maxWidth="250.0" minHeight="20.0" minWidth="200.0" prefHeight="35.0" prefWidth="200.0" text="6010">
+    <TextField fx:id="textFieldLocalPort" maxHeight="50.0" maxWidth="250.0" minHeight="20.0" minWidth="200.0" onAction="#onActionTextFieldLocalPort" prefHeight="35.0" prefWidth="200.0" text="6010">
         <VBox.margin>
             <Insets bottom="10.0" />
         </VBox.margin>
@@ -37,7 +37,7 @@
     </TextField>
    <Label text="Nombre de usuario" />
 
-    <TextField fx:id="textFieldUsername" onAction="#onActionTextFieldusername" maxHeight="50.0" maxWidth="250.0" minHeight="20.0" minWidth="200.0" prefHeight="35.0" prefWidth="200.0" text="Usuario">
+    <TextField fx:id="textFieldUsername" maxHeight="50.0" maxWidth="250.0" minHeight="20.0" minWidth="200.0" onAction="#onActionTextFieldusername" prefHeight="35.0" prefWidth="200.0" text="Usuario">
         <VBox.margin>
             <Insets bottom="10.0" />
         </VBox.margin>
@@ -45,9 +45,10 @@
             <Font size="20.0" />
         </font>
     </TextField>
+   <Label fx:id="labelError" layoutX="372.0" layoutY="192.0" />
 
 
-    <Button fx:id="buttonLogin" maxWidth="150.0" onAction="#onLogin" prefHeight="30.0" text="Entrar">
+    <Button fx:id="buttonLogin" maxWidth="150.0" onAction="#onActionButtonLogin" prefHeight="30.0" text="Entrar">
         <font>
             <Font size="15.0" />
         </font>
