--- a/src/main/resources/com/vedruna/proyectoServicios2ev/client/chat-view.fxml
+++ b/src/main/resources/com/vedruna/proyectoServicios2ev/client/chat-view.fxml
@@ -1,20 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.TextFlow?>
 
-<VBox alignment="BOTTOM_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="350.0" spacing="20.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vedruna.proyectoServicios2ev.client.ChatController">
+<VBox stylesheets="@../Styles.css" alignment="BOTTOM_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="350.0" spacing="20.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vedruna.proyectoServicios2ev.client.ChatController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-   <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" prefHeight="491.0" prefWidth="310.0">
+   <ImageView fitHeight="56.0" fitWidth="56.0" pickOnBounds="true" preserveRatio="true">
+      <image>
+         <Image url="@../img/logo.png" />
+      </image>
+   </ImageView>
+   <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" prefHeight="424.0" prefWidth="300.0">
        <TextFlow fx:id="textFlow" prefHeight="200.0" prefWidth="292.0" />
    </ScrollPane>
    <HBox alignment="CENTER" prefHeight="48.0" prefWidth="326.0">
       <children>
-         <TextField fx:id="textField" maxWidth="-Infinity" minWidth="202.0" onKeyPressed="#onKeyPressedTextField" prefHeight="24.0" prefWidth="202.0">
+         <TextField fx:id="textField" maxWidth="-Infinity" minWidth="202.0" onKeyPressed="#onKeyPressedTextField"  promptText="Ingrese el mensaje" prefHeight="24.0" prefWidth="202.0">
             <opaqueInsets>
                <Insets />
             </opaqueInsets>
@@ -22,7 +33,10 @@
                <Insets right="10.0" />
             </HBox.margin>
          </TextField>
-          <Button fx:id="sendButton" onAction="#onActionSendButton" text="Enviar" textAlignment="CENTER" />
+          <Button fx:id="sendButton" onAction="#onActionSendButton" prefHeight="25.0" prefWidth="91.0" style="-fx-background-color: #209cf4;" text="Enviar" textAlignment="CENTER" textFill="WHITE">
+            <font>
+               <Font name="System Bold" size="12.0" />
+            </font></Button>
       </children>
    </HBox>
 
