--- a/src/main/resources/com/vedruna/proyectoServicios2ev/client/login-view.fxml
+++ b/src/main/resources/com/vedruna/proyectoServicios2ev/client/login-view.fxml
@@ -1,15 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox alignment="CENTER" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vedruna.proyectoServicios2ev.client.LoginController">
+<VBox alignment="CENTER" prefHeight="500.0" prefWidth="350.0" stylesheets="@../Styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vedruna.proyectoServicios2ev.client.LoginController">
+   <ImageView fitHeight="88.0" fitWidth="158.0" pickOnBounds="true" preserveRatio="true">
+      <image>
+         <Image url="@../img/logo.png" />
+      </image>
+   </ImageView>
 
-    <Text text="ChatUDP" textAlignment="CENTER">
+                               <Text text="ChatUDP" textAlignment="CENTER">
         <font>
-            <Font size="30.0" />
+            <Font name="System Bold" size="30.0" />
         </font>
         <VBox.margin>
             <Insets bottom="20.0" />
@@ -17,7 +27,7 @@
     </Text>
    <Label text="IP del servidor" />
 
-    <TextField fx:id="textFieldIp" maxHeight="50.0" maxWidth="250.0" minHeight="20.0" minWidth="200.0" onAction="#onActionTextFieldIp" prefHeight="35.0" prefWidth="200.0" text="127.0.0.1">
+                                           <TextField fx:id="textFieldIp" maxHeight="50.0" maxWidth="250.0" minHeight="20.0" minWidth="200.0" onAction="#onActionTextFieldIp" prefHeight="35.0" prefWidth="200.0" text="127.0.0.1">
         <VBox.margin>
             <Insets bottom="10.0" />
         </VBox.margin>
@@ -27,7 +37,7 @@
     </TextField>
     <Label text="Puerto local" />
 
-    <TextField fx:id="textFieldLocalPort" maxHeight="50.0" maxWidth="250.0" minHeight="20.0" minWidth="200.0" onAction="#onActionTextFieldLocalPort" prefHeight="35.0" prefWidth="200.0" text="6010">
+                            <TextField fx:id="textFieldLocalPort" maxHeight="50.0" maxWidth="250.0" minHeight="20.0" minWidth="200.0" onAction="#onActionTextFieldLocalPort" prefHeight="35.0" prefWidth="200.0" text="6010">
         <VBox.margin>
             <Insets bottom="10.0" />
         </VBox.margin>
@@ -37,7 +47,7 @@
     </TextField>
    <Label text="Nombre de usuario" />
 
-    <TextField fx:id="textFieldUsername" maxHeight="50.0" maxWidth="250.0" minHeight="20.0" minWidth="200.0" onAction="#onActionTextFieldusername" prefHeight="35.0" prefWidth="200.0" text="Usuario">
+                            <TextField fx:id="textFieldUsername" maxHeight="50.0" maxWidth="250.0" minHeight="20.0" minWidth="200.0" onAction="#onActionTextFieldusername" prefHeight="35.0" prefWidth="200.0" text="Usuario">
         <VBox.margin>
             <Insets bottom="10.0" />
         </VBox.margin>
@@ -47,22 +57,14 @@
     </TextField>
    <Label fx:id="labelError" layoutX="372.0" layoutY="192.0" />
 
-
-    <Button fx:id="buttonLogin" maxWidth="150.0" onAction="#onActionButtonLogin" prefHeight="30.0" text="Entrar">
+                        
+                            <Button fx:id="buttonLogin" maxWidth="150.0" onAction="#onActionButtonLogin" prefHeight="30.0" style="-fx-background-color: #209cf4;" text="Entrar" textFill="WHITE">
         <font>
-            <Font size="15.0" />
+            <Font name="System Bold" size="15.0" />
         </font>
         <VBox.margin>
             <Insets top="20.0" />
-        </VBox.margin></Button>
-
-
-    <Label fx:id="accessError" alignment="CENTER" contentDisplay="CENTER" maxWidth="350.0" prefHeight="40.0" textAlignment="CENTER" textFill="RED">
-        <VBox.margin>
-            <Insets top="20.0" />
         </VBox.margin>
-        <font>
-            <Font size="15.0" />
-        </font></Label>
+   </Button>
 
-</VBox>
+                        </VBox>
