--- a/src/main/resources/com/vedruna/proyectoServicios2ev/client/chat-view.fxml
+++ b/src/main/resources/com/vedruna/proyectoServicios2ev/client/chat-view.fxml
@@ -1,31 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.TextFlow?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox stylesheets="@../Styles.css" alignment="BOTTOM_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="350.0" spacing="20.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vedruna.proyectoServicios2ev.client.ChatController">
+<VBox alignment="BOTTOM_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="350.0" spacing="20.0" stylesheets="@../Styles.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vedruna.proyectoServicios2ev.client.ChatController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-   <ImageView fitHeight="56.0" fitWidth="56.0" pickOnBounds="true" preserveRatio="true">
-      <image>
-         <Image url="@../img/logo.png" />
-      </image>
-   </ImageView>
-   <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" prefHeight="424.0" prefWidth="300.0">
-       <TextFlow fx:id="textFlow" prefHeight="200.0" prefWidth="292.0" />
+   <HBox alignment="CENTER" prefHeight="39.0" prefWidth="310.0">
+      <children>
+         <ImageView fitHeight="37.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+               <Image url="@../img/logo.png" />
+            </image>
+         </ImageView>
+         <Label text="UDPChat" textAlignment="CENTER" textFill="WHITE">
+            <font>
+               <Font size="24.0" />
+            </font>
+            <opaqueInsets>
+               <Insets />
+            </opaqueInsets>
+            <HBox.margin>
+               <Insets left="20.0" />
+            </HBox.margin>
+         </Label>
+      </children>
+   </HBox>
+   <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" prefHeight="498.0" prefWidth="310.0">
+       <TextFlow fx:id="textFlow" prefHeight="205.0" prefWidth="292.0" />
    </ScrollPane>
    <HBox alignment="CENTER" prefHeight="48.0" prefWidth="326.0">
       <children>
-         <TextField fx:id="textField" maxWidth="-Infinity" minWidth="202.0" onKeyPressed="#onKeyPressedTextField"  promptText="Ingrese el mensaje" prefHeight="24.0" prefWidth="202.0">
+         <TextField fx:id="textField" maxWidth="-Infinity" minWidth="202.0" onKeyPressed="#onKeyPressedTextField" prefHeight="24.0" prefWidth="202.0" promptText="Ingrese el mensaje">
             <opaqueInsets>
                <Insets />
             </opaqueInsets>
