--- a/src/main/resources/com/vedruna/proyectoServicios2ev/server/info-view.fxml
+++ b/src/main/resources/com/vedruna/proyectoServicios2ev/server/info-view.fxml
@@ -2,15 +2,33 @@
 
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox alignment="BOTTOM_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="350.0" spacing="20.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vedruna.proyectoServicios2ev.server.InfoController">
+<VBox alignment="BOTTOM_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="591.0" spacing="20.0" stylesheets="@../Styles.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vedruna.proyectoServicios2ev.server.InfoController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-    <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" prefHeight="559.0" prefWidth="310.0">
-        <TextFlow fx:id="textFlow" prefHeight="201.0" prefWidth="292.0" />
+   <HBox alignment="CENTER" prefHeight="85.0" prefWidth="246.0">
+      <children>
+         <ImageView fitHeight="44.0" fitWidth="43.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+               <Image url="@../img/logo.png" />
+            </image>
+            <HBox.margin>
+               <Insets right="10.0" />
+            </HBox.margin>
+         </ImageView>
+         <Label prefHeight="35.0" prefWidth="319.0" text="ChatUDP SERVER">
+            <font>
+               <Font name="System Bold" size="24.0" />
+            </font>
+         </Label>
+      </children>
+   </HBox>
+    <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" prefHeight="567.0" prefWidth="310.0">
+        <TextFlow fx:id="textFlow" prefHeight="194.0" prefWidth="531.0" />
     </ScrollPane>
 
 </VBox>
